<resources>
    <string name="app_name">Alexandria Library</string>
    <string name="app_share_base">com.alexandria.android.alexandrialibrary</string>

    <!-- Strings related to login -->
    <string name="prompt_utente">Utente</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Invia</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_utente">Valore utente troppo corto</string>
    <string name="error_invalid_password">Password troppo corta</string>
    <string name="error_incorrect_login">Utente o password incorretti</string>
    <string name="error_field_required">Campo obbligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_main">Home</string>
    <string name="title_activity_prestiti">Prestiti</string>

    <string name="dialog_ask_user_utente">Selezionare Utente</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="image_book_tag">image_book</string>

    <string name="nav_home_label">Home</string>
    <string name="nav_prestiti_label">Prestiti</string>
    <string name="nav_logout_label">Logout</string>

    <string name="shared_preferences_is_logged">isLogged</string>
    <string name="shared_preferences_is_admin">isAdmin</string>
    <string name="shared_preferences_id_utente">idUtente</string>
    <string name="shared_preferences_utente">utente</string>

    <string name="tomcat_session_tracker">JSESSIONID</string>

    <!-- buttons label -->
    <string name="annulla">Annulla</string>
    <string name="esegui">Esegui</string>
    <string name="ok">OK</string>
</resources>
